src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_case_2f@ISCA-46311-2F-pos-2.snap
---
source: src/strucvars/eval/del/section2.rs
expression: "&region_overlaps"
---
- isca_id: ISCA-46311
  isca_region_name: 1p36.21 population region (gnomAD-SV_v2.1_DEL_1_1094)
  genomic_location: "1:12989199-12998900"
  haploinsufficiency_score: DosageSensitivityUnlikely
  triplosensitivity_score: NoEvidenceAvailable
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: ~

