src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_case_2h@REV3L-2H-pos-1.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
l2:
  l2_h:
    suggested_score: 0.15
    gene_hi_predictions:
      - gene:
          hgnc_id: "HGNC:9968"
          hgnc_symbol: REV3L
          ensembl_gene_id: ENSG00000009413
          ncbi_gene_id: "5980"
        results:
          - decipher_hi_index:
              hi_index: 0.03
          - gnomad_pli:
              pli_score: 1
              oe_lof_upper: 0.117

