src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_cases_2c_2e@APOB-2C-2.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
l2:
  l2_c2:
    suggested_score: 0
    gene:
      hgnc_id: "HGNC:603"
      hgnc_symbol: APOB
      ensembl_gene_id: ENSG00000084674
      ncbi_gene_id: "338"

